# c_vector

./: CMakeLists.txt  README.md
.gitea/workflows/: build.yml
include/: vector.h
src/: vector_core.c
tests/: CMakeLists.txt  tests_main.c
